--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ if you have any suggestions or issues you can contact me on discord (shenef#1269
   --page-width: 85%; /* srcom default: 1140px */
   --video-height: 87vh; /* video height on run pages */
   --profile-pic-size: 150px;
-  --forum-post-width: 60ch; /* shorter lines are easier to read, recommended: 60ch */
+  --forum-post-width: 70ch; /* shorter lines are easier to read, recommended: 70ch */
 }
 /* END OF SETTINGS */
 
@@ -178,4 +178,39 @@ div.col-auto.mt-4.listcell.center {
 }
 div#widget.col-auto {
   display: none;
+}*/
+
+/* change font on dropdown headers and in search result headers */
+div.dropdown-header {
+    font-weight: bold;
+    font-size: 1.15em;
+    font-family: "Industry",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+    line-height: 0.4em;
+    padding-top: 1.2em;
+}
+
+/* limit searchbar width - just testing for now */
+#navbar-search  {
+    max-width: 80% !important;
+}
+
+/* reduce search result height and improve scrolling behaviour */
+ul#ui-id-2 {
+    max-height: 75vh !important;
+    overscroll-behavior: contain;
+}
+
+/* forum table fixes - but they break forum posts...*/
+/*th, td {
+    text-align: left !important;
+    width: 2000px !important;
+}
+
+td.forum-cell-new, td.forum-cell-user, td.forum-cell-posts, td.forum-cell-views, td.forum-cell-lastpost, th {
+    width: unset !important;
+    min-width: 1px !important;
+}
+
+td.forum-cell-user, td.forum-cell-posts, td.forum-cell-views, td.forum-cell-lastpost {
+    min-width: 5vw !important;
 }*/
